# huahua-assistant

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-29-huahua-implementation.md  2026-03-30-huahua-pipecat-migration-plan.md
docs/superpowers/specs/: 2026-03-29-huahua-ai-assistant-design.md  2026-03-30-huahua-pipecat-migration-design.md
prompts/: default.txt
src/: __init__.py  agent.py  config.py
src/audio/: capture.py  player.py
src/conversation/: history.py  state_machine.py
src/llm/: openclaw.py
src/pipecat_app/: __init__.py  pipeline.py  session.py
src/prompts/: loader.py
src/services/: __init__.py  funasr_service.py  kokoro_service.py  openclaw_service.py
src/stt/: whisper.py
src/tts/: kokoro.py
src/utils/: typing.py
src/vad/: silero_vad.py
src/wakeword/: openwakeword.py
tests/test_agent/: test_lifecycle.py
tests/test_pipecat/: test_session.py
tests/test_services/: test_funasr_service.py  test_kokoro_service.py  test_openclaw_service.py
